# many-duplication-script

./: Cargo.toml
list-all-transactions/: Cargo.toml
list-all-transactions/src/: main.rs
